Buggy and bad structure, but added deck functionality and prepared to add building crafting, which should not take too long I hope. Got to get some sleep, but ill try to finish that tmrw

--- a/TinyTowns.css
+++ b/TinyTowns.css
@@ -370,23 +370,27 @@ body {
   padding:10px;
   gap:10px;
 }
-div.resources {
+.resources {
   align-items: center;
   justify-items: center;
   grid-row:1;
   grid-column: 1;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-flow: rows;
   display: grid;
   gap:5px;
   width:150px;
-  height:50px;
+  height:480px;
 }
 
-.resources .card {
+.resource {
   border: 5px solid #6c2f07;
-  padding: 50px;
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .off {
@@ -405,8 +409,9 @@ div.resources {
   background-color: #d4b48b;
   border: 5px solid #6c2f07;
   border-radius: 5px;
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-content: center;
   align-items: center;
   width: 480px;
@@ -425,6 +430,7 @@ div.resources {
   height: 100px;
   margin: auto;
 }
+
 .mint {
   color:greenyellow;
 }
